--- a/featured-repositories.yaml
+++ b/featured-repositories.yaml
@@ -37,7 +37,7 @@ categories:
       - url: "https://github.com/obra/superpowers"
         name: "obra"
         description:
-          en: "Superpowers is a complete software development workflow for your coding agents, built on top of a set of composable "skills" and some initial instructions that make sure your agent uses them."
+          en: "Superpowers is a complete software development workflow for your coding agents, built on top of a set of composable skills and some initial instructions that make sure your agent uses them."
           zh: "Superpowers 是一套专为 Claude Code 等 AI 编程助手设计的全自动开发工作流。它不只是简单的功能扩展，而是将 TDD（测试驱动开发）、苏格拉底式需求头脑风暴和子代理驱动开发（Subagent-driven development）等深度工程实践固化为 AI 的“肌肉记忆”"
         tags: ["community", "popular", "superpowers"]
         featured: true
