--- a/featured-repositories.yaml
+++ b/featured-repositories.yaml
@@ -24,6 +24,13 @@ categories:
           zh: "Anthropic 官方 Claude Code 技能仓库"
         tags: ["official", "verified", "claude-code"]
         featured: true
+      - url: "https://github.com/obra/superpowers"
+        name: "obra"
+        description:
+          en: "Superpowers is a complete software development workflow for your coding agents, built on top of a set of composable skills and some initial instructions that make sure your agent uses them."
+          zh: "Superpowers 是一套专为 Claude Code 等 AI 编程助手设计的全自动开发工作流。它不只是简单的功能扩展，而是将 TDD（测试驱动开发）、苏格拉底式需求头脑风暴和子代理驱动开发（Subagent-driven development）等深度工程实践固化为 AI 的“肌肉记忆”"
+        tags: ["official", "verified", "superpowers"]
+        featured: true
 
   # Community repositories
   - id: "community"
@@ -34,14 +41,6 @@ categories:
       en: "High-quality community-contributed skill repositories"
       zh: "社区贡献的高质量技能仓库"
     repositories:
-      - url: "https://github.com/obra/superpowers"
-        name: "obra"
-        description:
-          en: "Superpowers is a complete software development workflow for your coding agents, built on top of a set of composable skills and some initial instructions that make sure your agent uses them."
-          zh: "Superpowers 是一套专为 Claude Code 等 AI 编程助手设计的全自动开发工作流。它不只是简单的功能扩展，而是将 TDD（测试驱动开发）、苏格拉底式需求头脑风暴和子代理驱动开发（Subagent-driven development）等深度工程实践固化为 AI 的“肌肉记忆”"
-        tags: ["community", "popular", "superpowers"]
-        featured: true
-
       - url: "https://github.com/ComposioHQ/awesome-claude-skills"
         name: "ComposioHQ"
         description:
@@ -96,4 +95,52 @@ categories:
           en: "Three skills for working with Obsidian: JSON Canvas (create/edit .canvas files), Obsidian Bases (create/edit .base files with views, filters, formulas), and Obsidian Flavored Markdown (create/edit with Obsidian-specific syntax)"
           zh: "三款 Obsidian 相关技能：JSON Canvas（创建/编辑 .canvas 文件）、Obsidian Bases（创建/编辑包含视图、筛选器、公式的 .base 文件）、Obsidian Flavored Markdown（创建/编辑支持 Obsidian 特定语法的 Markdown）"
         tags: ["community", "obsidian", "markdown", "productivity", "note-taking"]
+        featured: true
+
+      - url: "https://github.com/JimLiu/baoyu-skills"
+        name: "JimLiu"
+        description:
+          en: "Skills shared by Baoyu for improving daily work efficiency with Claude Code."
+          zh: "宝玉分享的 Claude Code 技能集，提升日常工作效率。"
+        tags: ["community", "claude-code", "productivity", "collection"]
+        featured: true
+
+      - url: "https://github.com/vercel-labs/agent-skills"
+        name: "vercel-labs"
+        description:
+          en: "A collection of skills for AI coding agents that follow the Agent Skills format."
+          zh: "面向 AI 编程代理的技能集合，遵循 Agent Skills 格式。"
+        tags: ["community", "agent-skills", "ai-agents", "collection"]
+        featured: true
+
+      - url: "https://github.com/nextlevelbuilder/ui-ux-pro-max-skill"
+        name: "nextlevelbuilder"
+        description:
+          en: "An AI skill that provides design intelligence for building professional multi-platform UI/UX."
+          zh: "为多平台专业 UI/UX 构建设计智能的 AI 技能。"
+        tags: ["community", "ui-ux", "design", "frontend"]
+        featured: true
+
+      - url: "https://github.com/czlonkowski/n8n-skills"
+        name: "czlonkowski"
+        description:
+          en: "n8n skillset for Claude Code to build flawless n8n workflows"
+          zh: "面向 Claude Code 的 n8n 技能集，用于构建高质量 n8n 工作流。"
+        tags: ["community", "n8n", "workflow-automation", "claude-code"]
+        featured: true
+
+      - url: "https://github.com/wshuyi/x-article-publisher-skill"
+        name: "wshuyi"
+        description:
+          en: "Claude Code skill for publishing Markdown articles to X (Twitter) Articles"
+          zh: "用于将 Markdown 文章发布到 X（Twitter）Articles 的 Claude Code 技能。"
+        tags: ["community", "publishing", "markdown", "x"]
+        featured: true
+
+      - url: "https://github.com/teng-lin/notebooklm-py"
+        name: "teng-lin"
+        description:
+          en: "The missing API for Google NotebookLM. Automate research workflows, generate podcasts from your documents, and integrate NotebookLM into AI agents—all from Python or the command line."
+          zh: "Google NotebookLM 的缺失 API：自动化研究流程、从文档生成播客，并可通过 Python 或命令行集成到 AI 代理。"
+        tags: ["community", "notebooklm", "python", "research"]
         featured: true
