初步支持plugin形式的skills安装，使用 Claude 的非交互子命令（claude plugin marketplace add … / claude plugin install …），而不是在交互会话里发送 /plugin … 指令。-p/子命令模式不会触发 workspace 信任提示

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -75,6 +75,10 @@ tauri-plugin-os = "2.0"
 # 国际化
 rust-i18n = "3"
 
+# PTY 驱动 Claude Code CLI
+portable-pty = "0.8"
+which = "6.0"
+
 
 [features]
 default = ["custom-protocol"]
