--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,9 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-feature
 # 异步运行时
 tokio = { version = "1.40", features = ["full"] }
 
+# 并行计算
+rayon = "1.10"
+
 # 错误处理
 thiserror = "2.0"
 anyhow = "1.0"
